# dehallucinator

./: .flake8  .gitignore  LICENSE  README.md  docker-compose-cpu.yml  docker-compose-gpu.yml  docker-compose-milvus.yml  docker-compose-min.yml  docker-compose.yml  milvus.yaml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: README.md  ci.yml  docker-build.yaml.example  front-end-build.yaml
conf/nginx/: nginx.conf
docs/: docker_architecture.pptx
measurement/: Dockerfile  README.md  ragas_evaluation.py  requirements-dev.bak  requirements.txt  setup.py  squad_qa_dl.py
measurement/notebooks/: experiment_context_comparison.ipynb  experiment_hallucination_measurement hyde.ipynb  experiment_hallucination_measurement.ipynb  experiment_hallucination_measurement_hyde.ipynb  experiment_hyde_prompt_comparison.ipynb  experiment_no_answer_prompt.ipynb  experiment_no_context_prompt.ipynb  experiment_rag_ragas_measurement.ipynb  experiment_speed_performance.ipynb  langchain_rag.ipynb  ragas_quickstart.ipynb  squad_download.ipynb  vis.ipynb
measurement/src/: ragas_evaluation.py
measurement/utils/: build_container.sh  download_squad_data.sh  evaluate_rag.sh
notebooks/: langchain_experiment.ipynb  openai_connect_test.ipynb  squad_download.ipynb
rag/: Dockerfile  app.py  requirements.txt
rag_api/: Dockerfile  jupyter.dockerfile  main.py  requirements.txt  setup.py  squad_scoring.py
src/: ragas_evaluation.py
terraform/: README.md  deh_ec2.tftpl  dev.tftpl  main.tf  output.tf  variables.tf
ui/: Dockerfile  auto_app.py  requirements.txt
ui/deh/: app.py  (+2 more)
(+71 files in other folders)
